--- a/APM/src/app/products/product-list.component.html
+++ b/APM/src/app/products/product-list.component.html
@@ -7,13 +7,14 @@
     <div class='row'>
        <div class='col-md-2'>Filter by:</div>
         <div class='col-md-4'>
-            <input type='text'/>
+            <input type='text'  
+            [(ngModel)]='listFilter'/>
         </div>
        </div>
 
         <div class='row'>
               <div class='col-md-6'>
-                  <h4> Filter by: </h4> 
+                  <h4> Filter by: {{listFilter}} </h4> 
               </div>  
               <div class='table-responsive'>
                     <table class='table'
@@ -21,8 +22,9 @@
                         <thead> Your Result:
                             <tr>
                                 <th>
-                                    <button class='btn btn-primary'>
-                                        ShowImage
+                                    <button class='btn btn-primary'
+                                    (click)='toggleImage()'> 
+                                        {{ showImage ? 'Hide' : 'Show'  }}Image
                                     </button>
                                 </th>
                                 <th>Product</th>
@@ -33,13 +35,19 @@
                             </tr>
                         </thead>
                         <tbody>
-                             <tr *ngFor =' let product1 of products123'>
-                                 <td></td>
+                             <tr *ngFor ='let product1 of filteredProducts'>
+                                 <td>
+                                     <img  *ngIf='showImage'
+                                     [src]='product1.imageUrl'
+                                        [title]='product1.productName'
+                                        [style.width.px]='imageWidth'
+                                        [style.margin.px]='imageMargin'>
+                                 </td>
                                  <td>{{ product1.productName}}</td>
-                                 <td>{{ product1.productCode}}</td>
+                                 <td>{{ product1.productCode | lowercase | convertToSpaces:'-'  }}</td>  <!-- declare pipe name in ngModule -->
                                  <td>{{ product1.releaseDate}}</td>
-                                 <td>{{ product1.price}}</td>
-                                 <td>{{ product1.starRating}}</td>
+                                 <td>{{ product1.price | currency:'INR':'symbol':'1.2-2' }}</td>
+                                 <td><pm-star [rating]='product1.starRating'></pm-star></td>
                              </tr> 
                         </tbody>
                     </table>
